--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -13,5 +13,5 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
-    - name: Gradle version
-      run: ./gradlew -v 
+    - name: Sonar Analysis
+      run: ./gradlew sonarqube 
