--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
+    - name: Lint Report
+      run: ./gradlew lintDebug
+    - name: Upload html test report
+      uses: actions/upload-artifact@v2
+      with:
+        name: index.html
+        path: app/build/reports/lint-results-debug.html
+
+      
     - name: Sonar Analysis
       run: ./gradlew sonarqube 
     - name: Unit Test Case
