--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         name: index.html
         path: app/build/reports/lint-results-debug.html
+        if-no-files-found: warn
 
       
     - name: Sonar Analysis
