--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -27,3 +27,9 @@ jobs:
       run: ./gradlew sonarqube 
     - name: Unit Test Case
       run: ./gradlew test
+    - name: Upload unit test report
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-report.html
+        path: app/build/reports/tests/testDebugUnitTest/index.html
+        if-no-files-found: warn  
