--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -38,3 +38,9 @@ jobs:
         name: test-report.html
         path: app/build/reports/tests/testDebugUnitTest/index.html
         if-no-files-found: warn  
+
+  Build: 
+   runs-on: self-hosted
+   steps:    
+    - name: Build
+      run: ./gradlew assembleDebug
