--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -10,6 +10,7 @@ jobs:
       uses: actions/checkout@v2
 
   Lint-Report:
+    needs: Code-checkout
     runs-on: self-hosted
     steps:
     - name: Lint Report
@@ -22,12 +23,14 @@ jobs:
         if-no-files-found: warn
     
   Sonar-Analysis:
+    needs: Lint-Report
     runs-on: self-hosted
     steps:      
     - name: Sonar Analysis
       run: ./gradlew sonarqube
 
   Unit-Test: 
+   needs: Sonar-Analysis
    runs-on: self-hosted
    steps:    
     - name: Unit Test Case
@@ -40,7 +43,15 @@ jobs:
         if-no-files-found: warn  
 
   Build: 
+   needs: Unit-Test
    runs-on: self-hosted
    steps:    
     - name: Build
       run: ./gradlew assembleDebug
+
+  Deploy-apk: 
+   needs: Build
+   runs-on: self-hosted
+   steps:    
+    - name: Deploy-apk
+      run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token 170a554ec01db2abbfcfe718f563b32393c08617 -g "test"
