--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -50,8 +50,9 @@ jobs:
       run: ./gradlew assembleDebug
 
   Deploy-apk: 
-   needs: Build
+   # needs: Build
    runs-on: self-hosted
    steps:    
     - name: Deploy-apk
-      run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token 170a554ec01db2abbfcfe718f563b32393c08617 -g "test"
+      # run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token 170a554ec01db2abbfcfe718f563b32393c08617 -g "test"
+      run: appcenter -v
