--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -9,41 +9,41 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-  Lint-Report:
-    needs: Code-checkout
-    runs-on: self-hosted
-    steps:
-    - name: Lint Report
-      run: ./gradlew lintDebug
-    - name: Upload html test report
-      uses: actions/upload-artifact@v3
-      with:
-        name: index.html
-        path: app/build/reports/lint-results-debug.html
-        if-no-files-found: warn
+  # Lint-Report:
+  #   needs: Code-checkout
+  #   runs-on: self-hosted
+  #   steps:
+  #   - name: Lint Report
+  #     run: ./gradlew lintDebug
+  #   - name: Upload html test report
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: index.html
+  #       path: app/build/reports/lint-results-debug.html
+  #       if-no-files-found: warn
     
-  Sonar-Analysis:
-    needs: Lint-Report
-    runs-on: self-hosted
-    steps:      
-    - name: Sonar Analysis
-      run: ./gradlew sonarqube
+  # Sonar-Analysis:
+  #   needs: Lint-Report
+  #   runs-on: self-hosted
+  #   steps:      
+  #   - name: Sonar Analysis
+  #     run: ./gradlew sonarqube
 
-  Unit-Test: 
-   needs: Sonar-Analysis
-   runs-on: self-hosted
-   steps:    
-    - name: Unit Test Case
-      run: ./gradlew test
-    - name: Upload unit test report
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-report.html
-        path: app/build/reports/tests/testDebugUnitTest/index.html
-        if-no-files-found: warn  
+  # Unit-Test: 
+  #  needs: Sonar-Analysis
+  #  runs-on: self-hosted
+  #  steps:    
+  #   - name: Unit Test Case
+  #     run: ./gradlew test
+  #   - name: Upload unit test report
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: test-report.html
+  #       path: app/build/reports/tests/testDebugUnitTest/index.html
+  #       if-no-files-found: warn  
 
   Build: 
-   needs: Unit-Test
+   # needs: Unit-Test
    runs-on: self-hosted
    steps:    
     - name: Build
@@ -52,7 +52,10 @@ jobs:
   Deploy-apk: 
    # needs: Build
    runs-on: self-hosted
-   steps:    
-    - name: Deploy-apk
-      # run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token 170a554ec01db2abbfcfe718f563b32393c08617 -g "test"
-      run: appcenter -v
+   steps:
+    - name: Upload to App Center
+      uses: microsoft/appcenter-build@v2
+      with:
+        app_secret: ${{ secrets.APP_CENTER_SECRET }}
+        file: app/build/outputs/apk/release/app-release.apk
+        groups: test
