--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -53,9 +53,17 @@ jobs:
    # needs: Build
    runs-on: self-hosted
    steps:
+    - name: Install App Center CLI
+      run: |
+        npm install -g appcenter-cli
+
     - name: Upload to App Center
-      uses: microsoft/appcenter-build@v2
-      with:
-        app_secret: ${{ secrets.APP_CENTER_SECRET }}
-        file: app/build/outputs/apk/release/app-release.apk
-        groups: test
+      run: |
+        appcenter login --token ${{ secrets.APP_CENTER_API_TOKEN }}
+        appcenter distribute release \
+          -f app/build/outputs/apk/debug/app-debug.apk \
+          -g test \
+          -a sohampa-cybage.com/Demo_Android_App 
+          # -d your-distribution-group
+      env:
+        APP_CENTER_API_TOKEN: ${{ secrets.APP_CENTER_API_TOKEN }}
