--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -53,6 +53,11 @@ jobs:
    # needs: Build
    runs-on: self-hosted
    steps:
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
     - name: Install App Center CLI
       run: |
         npm install -g appcenter-cli
