--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -63,11 +63,4 @@ jobs:
         npm install -g appcenter-cli
 
     - name: Upload to App Center
-      run: |
-        appcenter distribute release \
-          -f app/build/outputs/apk/debug/app-debug.apk \
-          -g test \
-          -a sohampa-cybage.com/Demo_Android_App 
-          # -d your-distribution-group
-      env:
-        APP_CENTER_API_TOKEN: ${{ secrets.APP_CENTER_API_TOKEN }}
+      run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token cff85da442d6be30154ab06a14048f2d9e726614 -g "test"
