--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -68,28 +68,16 @@ jobs:
     needs: Code-checkout
     runs-on: self-hosted
     steps:
-    - name: Send custom JSON data to Slack workflow
-      id: slack
-      uses: slackapi/slack-github-action@v1.24.0
-      with:
-    # For posting a rich message using Block Kit
-        payload: |
-          {
-            "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
-            "blocks": [
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-                }
-              }
-            ]
-          }
-      env:
-        SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
-        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-
+      - name: Slack Notification
+        uses: act10ns/slack@v1
+        with:
+          status: ${{job.status}}
+          steps:  ${{toJson(steps)}}
+          channel: '#android-app-notification'
+          if: always()
+        env:
+            SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
+      
         
     
     
