--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -76,8 +76,7 @@ jobs:
           channel: '#android-app-notification'
           if: always()
         env:
-            SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
-      
+            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}      
         
     
     
