--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -26,14 +26,14 @@ jobs:
         if-no-files-found: warn
     
   Sonar-Analysis:
-    needs: Lint-Report
+    needs: Build
     runs-on: self-hosted
     steps:      
     - name: Sonar Analysis
       run: ./gradlew sonarqube
 
   Unit-Test: 
-   needs: Sonar-Analysis
+   needs: Lint-Report
    runs-on: self-hosted
    steps:    
     - name: Unit Test Case
@@ -69,7 +69,7 @@ jobs:
       run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token cff85da442d6be30154ab06a14048f2d9e726614 -g "test"
   
   Slack-Notification:
-    needs: Code-checkout
+    needs: Sonar-Analysis
     runs-on: self-hosted
     steps:
       - name: Slack Notification
@@ -82,27 +82,3 @@ jobs:
         env:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}      
         
-    
-    
-    
-    
-    
-    
-    # steps: 
-    #    - name: Slack Notification
-    #    # - uses: rtCamp/action-slack-notify@v2
-    #      run: |
-    #        curl -X POST -H 'Content-type: application/json' --data "{
-    #        \"text\": \"${{ job.status }}\"
-    #         }" https://hooks.slack.com/services/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
-
-         
-           
-         # env: 
-         #  SLACK_CHANNEL: android-app-notification
-         #  SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
-         #  SLACK_ICON: https://github.com/rtCamp.png?size=48
-         #  SLACK_MESSAGE: ${{ job.status }}
-         #  SLACK_TITLE: Post Title
-         #  SLACK_USERNAME: Cybage-SohamDemo
-         #  SLACK_WEBHOOK: https://hooks.slack.com/services/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
