--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -53,7 +53,7 @@ jobs:
       run: ./gradlew assembleDebug
 
   Deploy-apk: 
-   needs: Build
+   needs: Sonar-Analysis
    runs-on: self-hosted
    steps:
     - name: Set up Node.js
@@ -69,7 +69,7 @@ jobs:
       run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token cff85da442d6be30154ab06a14048f2d9e726614 -g "test"
   
   Slack-Notification:
-    needs: Sonar-Analysis
+    needs: Deploy-apk
     runs-on: self-hosted
     steps:
       - name: Slack Notification
