--- a/.github/workflows/androidCI.yml
+++ b/.github/workflows/androidCI.yml
@@ -66,7 +66,7 @@ jobs:
         npm install -g appcenter-cli
 
     - name: Upload to App Center
-      run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token cff85da442d6be30154ab06a14048f2d9e726614 -g "test"
+      run: appcenter distribute release --disable-telemetry --app sohampa-cybage.com/Demo_Android_App -f ./app/build/outputs/apk/debug/app-debug.apk --token ${{ secrets.APPCENTER_TOKEN } -g "test"
   
   Slack-Notification:
     needs: Deploy-apk
