--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,9 +2,9 @@ workflows:
   android-apk:
     name: Android APK Build
     max_build_duration: 120
-    environment:
-      vars:
-        JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64  # Set Java version
+    # environment:
+    #   vars:
+    #     JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64  # Set Java version
     scripts:
       - name: Clean project
         script: |
