--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,5 +13,9 @@ workflows:
       - name: Build APK
         script: |
           ./gradlew assembleRelease
+      - name: Debug: List generated files
+        script: |
+          echo "Checking APK directory:"
+          ls -R android/app/build/outputs/apk/release/
     artifacts:
       - android/app/build/outputs/apk/release/app-release.apk
