--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,6 +16,8 @@ workflows:
       - name: Debug List generated files
         script: |
           echo "Checking APK directory:"
-          ls -l
+          ls -l app/
+          ls -l build/
+          ls -l app/release/
     artifacts:
       - android/app/build/outputs/apk/release/app-release.apk
