--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,7 @@ workflows:
         script: |
           echo "Checking APK directory:"
           ls -l app/
-          ls -l build/
-          ls -l app/release/
+          # ls -l build/
+          # ls -l app/release/
     artifacts:
       - android/app/build/outputs/apk/release/app-release.apk
